fixed the alignment issues of course page

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -8425,6 +8425,7 @@ select::-ms-expand {
 }
 .courses-banner .breadcrums {
   margin-bottom: 1rem;
+  width: 100%;
 }
 .courses-banner .breadcrums .black {
   display: none;
@@ -8904,6 +8905,9 @@ select::-ms-expand {
   width: 15px;
   transform: rotate(88deg);
 }
+.training .filter-top .buttons {
+  margin-top: 0;
+}
 .training .form {
   display: none;
   flex-direction: column;
@@ -8918,7 +8922,7 @@ select::-ms-expand {
   padding: 0;
 }
 .training .select-dropdown {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   width: 100%;
 }
 .training select {
@@ -9590,12 +9594,10 @@ select::-ms-expand {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  padding: 1.5em;
   background-color: #FFFFFF;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.098);
   margin-top: 1.5rem;
-  width: 272px;
-  align-self: center;
 }
 .skill .skill-content:first-child {
   margin-top: 1rem;
@@ -9606,6 +9608,17 @@ select::-ms-expand {
 }
 .skill .skill-content p {
   text-align: center;
+}
+.skill .skill-content:hover {
+  background-image: linear-gradient(#0064D8, #1C2848);
+}
+.skill .skill-content:hover h3,
+.skill .skill-content:hover p {
+  color: #FFFFFF;
+}
+.skill .skill-content:hover .buttons .btn-blue:hover::before,
+.skill .skill-content:hover .buttons .btn-blue:hover::after {
+  content: none;
 }
 .related {
   padding: 3rem 1.5rem;
@@ -9871,7 +9884,6 @@ select::-ms-expand {
   }
   .training .select-dropdown {
     width: 40%;
-    margin-bottom: 0;
     padding-bottom: 0;
   }
   .training select {
@@ -9915,7 +9927,7 @@ select::-ms-expand {
   .training .name .buttons {
     flex-direction: row;
     margin-top: 0;
-    width: 50%;
+    width: 48%;
   }
   .training .name .buttons .btn-blue {
     margin-top: 0;
@@ -10057,7 +10069,7 @@ select::-ms-expand {
     justify-content: space-around;
   }
   .skill .skill-content {
-    width: 46%;
+    width: 47%;
     margin-top: 1rem;
   }
   .skill .skill-content p {
@@ -10469,7 +10481,7 @@ select::-ms-expand {
     justify-content: space-around;
   }
   .popular-location .popular-content {
-    width: 40%;
+    width: 42%;
     align-self: flex-start;
   }
   .popular-location .popular-content::before {
@@ -10479,7 +10491,7 @@ select::-ms-expand {
   }
   .popular-location .location-content {
     margin-top: 0;
-    width: 60%;
+    width: 58%;
   }
 }
 @media (min-width : 1366px) {
